# rust-actix-web

./: .env  Cargo.toml  docker-compose.yml
migrations/2022-05-21-074144_create_products/: up.sql
src/: db_connection.rs  main.rs
src/handlers/: products.rs
src/models/: product.rs
